# one-hub

./: .gitignore  AGENTS.md  CLAUDE.md  CODEMAP.md  Cargo.toml  QWEN.md  README.md
crates/assets/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: gpui_tokio.rs  lib.rs  tab_container.rs
crates/core/src/storage/: manager.rs  mod.rs  models.rs  repository.rs  sqlite_backend.rs  traits.rs
crates/db/: Cargo.toml
crates/db/src/: connection.rs  gpui_tokio.rs  lib.rs  manager.rs  plugin.rs  query_plugin_ext.rs  types.rs
crates/db/src/mysql/: connection.rs  plugin.rs
crates/db/src/postgresql/: connection.rs  plugin.rs
crates/db/src/sqlite/: connection.rs
crates/db_view/: Cargo.toml
crates/db_view/src/: data_export.rs  data_export_view.rs  data_import.rs  data_import_view.rs  database_objects_tab.rs  database_tab.rs  db_connection_form.rs  db_tree_view.rs  filter_editor.rs  lib.rs  multi_text_editor.rs  results_delegate.rs  sql_editor.rs  sql_editor_view.rs  sql_result_tab.rs  table_data_tab.rs  table_designer_view.rs  table_structure_tab.rs
crates/db_view/src/object_detail/: column_list_view.rs  database_list_view.rs  detail_view.rs  function_list_view.rs  mod.rs  table_list_view.rs  view_list_view.rs
crates/ui/src/: context_menu_tree.rs  icon.rs  lib.rs  styled.rs
crates/ui/src/chart/: bar_chart.rs
crates/ui/src/dock/: tab_panel.rs
crates/ui/src/input/popovers/: completion_menu.rs
crates/ui/src/table/: delegate.rs  mod.rs  state.rs
crates/ui/src/theme/: macos-classic.json  registry.rs
src/: app_view.rs  connection_store.rs  context_menu_tree.rs  data_export.rs  data_import.rs  database_objects_panel.rs  database_objects_tab.rs  database_tab.rs  db_connection_form.rs  db_tree_view.rs  db_workspace.rs  home.rs  main.rs  onehup_app.rs  results_delegate.rs  setting_tab.rs  sql_editor.rs  sql_editor_view.rs  tab_container.rs  tab_contents.rs  table_data_tab.rs  table_structure_tab.rs
src/object_detail/: column_list_view.rs  index_list_view.rs  mod.rs  table_list_view.rs
src/storage/: mod.rs  models.rs  sqlite_backend.rs
