[workspace]
members = [".", "crates/assets", "crates/core", "crates/db"]

[workspace.dependencies]
assets = { path = "crates/assets" }
db = { path = "crates/db" }
anyhow = "1"
gpui = "0.2.2"

[package]
name = "one-hub"
version = "0.1.0"
edition = "2024"

[dependencies]
assets.workspace = true
db.workspace = true
anyhow = "1"
lsp-types = "0.97.0"
gpui = "0.2.2"
gpui-macros = "0.2.2"
# Enable built-in tree-sitter language support so Syntax Highlighting works for SQL
gpui-component = { version = "0.4.0", features = ["tree-sitter-languages"] }
color-lsp = "0.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
dirs = "6.0"
rust-embed = { version = "8.7.2", features = ["interpolate-folder-path"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }


# Database connections
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "mysql", "postgres", "sqlite", "chrono", "bigdecimal", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
lazy_static = "1.4"
once_cell = "1.21.3"
hex = "0.4"
futures = "0.3.31"
rand = "0.8.5"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18" }

