[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "mysql", "postgres", "sqlite", "chrono", "bigdecimal", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
once_cell = "1.21"
tracing = "0.1"
hex = "0.4"
futures = "0.3"
rand = "0.8"
gpui = "0.2.2"
