[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
once_cell = "1.21"
tracing.workspace = true
hex = "0.4"
futures = "0.3"
rand = "0.8"
gpui.workspace = true
