[package]
name = "db_view"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
once_cell = "1.21"
tracing.workspace = true
hex = "0.4"
futures = "0.3"
rand = "0.8"
rfd = "0.15"
gpui.workspace = true
db.workspace = true
gpui-component = { workspace = true, features = ["tree-sitter-languages"] }
core.workspace = true
lsp-types.workspace = true
uuid.workspace = true
[lints]
workspace = true

